--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="73dp"
         android:textColor="@color/mycolor"
         android:ems="10"
-        android:hint="Username"
+        android:hint="@string/username"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -31,7 +31,7 @@
         android:layout_marginTop="80dp"
         android:textColor="@color/mycolor"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="numberPassword"
         app:layout_constraintStart_toStartOf="@+id/username"
         app:layout_constraintTop_toTopOf="@+id/username"/>
@@ -49,7 +49,7 @@
         android:textColor="@color/black"
         android:layout_marginStart="3dp"
         android:layout_marginTop="80dp"
-        android:text="LOGIN"
+        android:text="@string/loginbtn"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toTopOf="@+id/password"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
