--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="myheight">50dp</dimen>
     <dimen name="btnwidhth">100dp</dimen>
     <dimen name="btnheight">50dp</dimen>
+    <dimen name="textsize">40dp</dimen>
 </resources>
