--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="80dp"
         android:text="@string/loginbtn"
+        android:onClick="clickHandler"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toTopOf="@+id/password"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
