--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,11 +46,26 @@
         android:id="@+id/loginbtn"
         android:layout_width="@dimen/btnwidhth"
         android:layout_height="@dimen/btnheight"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_marginStart="3dp"
         android:layout_marginTop="80dp"
         android:text="@string/loginbtn"
+        android:textStyle="bold"
         android:onClick="clickHandler"
         app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="@+id/password"/>
+        app:layout_constraintTop_toTopOf="@+id/password" />
+
+    <Button
+        android:id="@+id/changelanguage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/changelanguage"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="80dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@+id/loginbtn"
+        app:layout_constraintTop_toTopOf="@+id/loginbtn"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
