--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="@dimen/myheight"
         android:layout_marginStart="42dp"
         android:layout_marginTop="73dp"
+        android:importantForAutofill="no"
         android:textColor="@color/mycolor"
         android:ems="10"
         android:hint="@string/username"
