--- a/app/src/main/res/layout/row_layout_item.xml
+++ b/app/src/main/res/layout/row_layout_item.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvRow"
-        android:textSize="20sp"
-        android:padding="5dp"
-        android:textStyle="bold"
-        android:textColor="#abc345"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        app:cardCornerRadius="15dp">
+
+        <TextView
+            android:id="@+id/tvRow"
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:textStyle="bold"
+            android:textColor="#abc345"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
