parsing json fix -- applied the converter plugin in project gradle

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,11 +21,11 @@
         android:id="@+id/btnGet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="33dp"
-        android:onClick="getJson"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="30dp"
+        android:onClick="getjson"
         android:text="get json"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvhome"
         app:layout_constraintTop_toBottomOf="@+id/tvhome" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
